--- a/preloader.html
+++ b/preloader.html
@@ -7,13 +7,14 @@
     <title>Loader</title>
 </head>
 <style>
-  .container {
+  body {
     cursor: progress;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    background-color: whitesmoke;
   }
   ul {
     display: flex;
@@ -27,7 +28,7 @@
   }
   ul li:nth-child(1) {
     animation: right-1 1s infinite alternate;
-    background-color: #ddd8b8;
+    background-color: #EAFFFA;
     animation-delay: 100ms;
   }
   @keyframes right-1 {
@@ -40,7 +41,7 @@
   }
   ul li:nth-child(2) {
     animation: right-2 1s infinite alternate;
-    background-color: #b3cbb9;
+    background-color: #0D5C63;
     animation-delay: 200ms;
   }
   @keyframes right-2 {
@@ -53,7 +54,7 @@
   }
   ul li:nth-child(3) {
     animation: right-3 1s infinite alternate;
-    background-color: #84a9c0;
+    background-color: #44A1A0;
     animation-delay: 300ms;
   }
   @keyframes right-3 {
@@ -66,7 +67,7 @@
   }
   ul li:nth-child(4) {
     animation: right-4 1s infinite alternate;
-    background-color: #6a66a3;
+    background-color: #78CDD7;
     animation-delay: 400ms;
   }
   @keyframes right-4 {
@@ -79,7 +80,7 @@
   }
   ul li:nth-child(5) {
     animation: right-5 1s infinite alternate;
-    background-color: #58548e;
+    background-color: #247B7B;
     animation-delay: 500ms;
   }
   @keyframes right-5 {
@@ -92,7 +93,6 @@
   }
 </style>
 <body>
-    <div class="container">
       <ul>
         <li></li>
         <li></li>
@@ -100,6 +100,5 @@
         <li></li>
         <li></li>
       </ul>
-    </div>
 </body>
 </html>
